--- a/TASK_02/style.css
+++ b/TASK_02/style.css
@@ -6,26 +6,29 @@
 
 body {
   font-family: "Times New Roman", Times, serif;
-  background-color: #282a36;
+  background-color: #0D1117; 
   color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100%; 
 }
 
 header,
 footer {
   font-size: 1.2rem;
   text-align: center;
+  margin: 10px;
 }
+
 
 main {
   display: flex;
   flex-direction: column;
   height: 85vh;
-  padding: 20px;
+  width: 100%;
+  padding: 0 50px 0 50px;
 }
 
 .top-panel {
@@ -51,17 +54,17 @@ main {
   flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
-  background-color: #1e1e1e;
+  background-color: #010409;
   padding: 10px;
   overflow: auto;
 }
 
 .button {
-  width: 120px;
+  width: 13%;
   margin: 5px;
   padding: 15px 0;
   font-size: 1.2rem;
-  background-color: #212121;
+  background-color: #0D1117;
   border: 2px solid transparent;
   border-radius: 5px;
   cursor: pointer;
@@ -77,7 +80,7 @@ main {
   display: flex;
   flex-direction: column;
   width:30%;
-  background-color: #212121;
+  background-color: #010409;
   font-size: 1.2rem;
   color: #fff;
   padding: 10px;
@@ -104,13 +107,9 @@ main {
 
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
-  main {
-    flex-direction: column;
-  }
 
   .bottom-panel {
     flex-direction: column;
-    height: auto;
   }
 
   .button {
