--- a/TASK_01/style.css
+++ b/TASK_01/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   margin: 0;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Georgia;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -21,6 +21,7 @@ nav {
   position: fixed;
   width: 100%;
   top: 0;
+  backdrop-filter: blur(15px); 
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: space-between;
@@ -122,15 +123,13 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #fff;
-  padding: 15px;
+  background-color: #f4f4f4;
+
 }
 
 .about-me {
-  color: #000000;
   font-size: 3em;
 }
-
 
 #skills {
   padding: 10px 0;
@@ -350,6 +349,10 @@ li {
   color: #111111;
 }
 
+.contact-form-link {
+  text-decoration: none;
+  color: #cb450c; 
+}
 
 footer {
   background-color: black;
